config/local/istio/gateways.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: edgecloud-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - hosts:
        - edgecloud.com
      port:
        name: https-443-edgecloud-com
        number: 443
        protocol: HTTPS
      tls:
        credentialName: edgecloud-com
        mode: SIMPLE
        privateKey: sds
        serverCertificate: sds
    - hosts:
        - api.edgecloud.com
      port:
        name: https-443-api-edgecloud-com
        number: 443
        protocol: HTTPS
      tls:
        credentialName: edgecloud-com
        mode: SIMPLE
        privateKey: sds
        serverCertificate: sds
