config/local/istio/frontend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-edge-cloud
spec:
  gateways:
    - edge-cloud-gateway
  hosts:
    - edge-cloud.com
  http:
    -
      match:
        -
          uri:
            prefix: /
      ignoreUriCase: true
      route:
        -
          destination:
            host: frontend.edge.svc.cluster.local
            port:
              number: 80
